--- a/src/components/pages/Info.module.css
+++ b/src/components/pages/Info.module.css
@@ -7,36 +7,45 @@
     font-size: 45px;
     color: rgb(38, 65, 219);
 }
-.info section {
-    margin-bottom: 4rem;
-}
+
 .info p {
     color: rgb(84, 81, 81);
 }
 .info{
-    position: absolute;
-    top:6rem;
-    left: 20rem;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 95vh;
+    gap: 40px;
 }
 
 @media screen and (max-width: 720px) {
     .info{
         position: absolute;
         top: 7rem;
-        left: 3rem;
-        width: 400px;
-        height:500px;
+        width: 90%;
+        height: 83vh;
         background-color: white;
         border-radius: 15px;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
     }
     .info h1 {
         font-weight: bolder;
         font-size: 30px;
         color: rgb(38, 65, 219);
         margin-top: 30px;
+        width: 100%;
     }
     .info h1 , .info p {
         position: relative;
         left: 1rem;
+    }
+    .info p{
+        font-size: 100%;
     }
 }
