--- a/src/components/pages/SelectPlan.module.css
+++ b/src/components/pages/SelectPlan.module.css
@@ -6,12 +6,21 @@
 }
 .plan{
     position: absolute;
-    top:12rem;
-    left: 21rem;
+    width: 100%;
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    justify-content: center;
+    align-items: center;
 }
 .form {
     display: flex;
     flex-direction: column;
+    width: 50%;
+    position: relative;
+    left: 60px;
+    
 }
 .h1{
     font-weight: bolder;
@@ -24,7 +33,6 @@
 .h1, .p{
     position: relative;
     left: 9rem;
-    bottom: 9rem;
 }
 
 .containerArcade,
@@ -36,7 +44,7 @@
     border-radius: 30px;
     transition: 1s;
     padding: 20px;
-    width: 15rem;
+    width: 20rem;
     height: 280px;
    position: relative;
    bottom: 5rem;
@@ -51,7 +59,7 @@
     border-radius: 30px;
     transition: 1s;
     padding: 20px;
-    width: 15rem;
+    width: 20rem;
     height: 280px;
     position: relative;
    bottom: 5rem;
@@ -142,8 +150,8 @@
     color: rgb(131, 28, 28);
     transition: .5s;
     position: absolute;
-    top: 26rem;
-    right: 0px;
+    top: 19rem;
+    right: -60px;
     width: 47rem;
     font-size: 20px;
     font-weight: 500;
@@ -157,11 +165,12 @@
 .selector {
     position: relative;
     left:2rem;
+    bottom: 50px;
     display: flex;
     gap: 20px;
     padding: 20px;
     border-radius: 20px;
-    background-color: rgb(242, 238, 238);
+    background-color: rgb(219, 218, 218);
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -201,7 +210,6 @@
 .bts {
     position: relative;
     left: 6rem;
-    top: 9rem;
     display: flex;
     gap: 15rem;
 }
@@ -231,22 +239,22 @@
     .h1, .p{
         position: relative;
         left: 1rem;
-        bottom:-1rem;
+        top: -50px;
+      
     }
     .h1{
         font-weight: bolder;
-        font-size: 35px;
+        font-size: 32px;
         color: rgb(38, 65, 219);
     }
     .p{
-        font-size: 20px;
+        font-size: 18px;
         color: rgb(84, 81, 81);
     }
     .plan{
         position: absolute;
         top: 8rem;
-        left: 3.3rem;
-        width: 400px;
+        width: 90%;
         height:570px;
         background-color: white;
         border-radius: 15px;
@@ -254,34 +262,34 @@
     .containerPai{
         display: flex;
         flex-direction: column;
+        gap: 15px;
     }
     .containerArcade,
 .containerAdvanced,
 .containerPro {
-    width: 350px;
+    width: 185%;
     height: 80px;
     display: flex;
-    position: relative;
-    top: 2rem;
-    right: 0.5em;
+    right: 10.5rem;
+    top:-140px;
     border-radius: 20px;
 }
 .containerArcadeSelected,
 .containerAdvancedSelected,
 .containerProSelected {
-    width: 350px;
+    width: 185%;
     height: 80px;
     display: flex;
     position: relative;
-    top: 2rem;
-    right: 0.5em;
+    right: 10.5rem;
+    top:-140px;
     border-radius: 20px;
 }
 .containerArcade span,
 .containerAdvanced span,
 .containerPro span{
     position: relative;
-    top: -10rem;
+    top: -9.5rem;
     left: 4rem;
     font-size: 25px;
 }
@@ -289,36 +297,48 @@
 .containerAdvancedSelected span,
 .containerProSelected span{
     position: relative;
-    top: -10rem;
+    top: -9.5rem;
     left: 4rem;
     font-size: 25px;
 }
 .selector{
-    width: 350px;
+    width: 190%;
+    height: 50px;
     position: absolute;
-    top: 30rem;
+    top: 9rem;
+    left: -8.5rem;
 
 }
 .valor, .promocao{
-    font-size: 15px;
+    font-size: 12px;
     font-weight: bolder;
     position: relative;
-    top: -10rem;
-    left: 4rem;
+    top: -11rem;
+    left: 11.5rem;
 }
 .bts {
     position: absolute;
-    left: -5rem;
-    top: 37rem;
+    left: -9rem;
+    top: 13.5rem;
     display: flex;
-    gap: 10rem;
+    gap: 3rem;
     width: 500px;
 }
+.goBack , .nextStep{
+    padding: 10px;
+    width: 130px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 0;
+    font-size: 18px;
+    font-weight: 500;
+    font-weight: bolder;
+}
 .actMsg{
-    width: 250px;
-    position: relative;
-    top: 2rem;
-    left: 4rem;
+    width: 185%;
+    position: absolute;
+    top: 16rem;
+    left: -8rem;
 }
 }
 
