--- a/src/components/pages/Summary.module.css
+++ b/src/components/pages/Summary.module.css
@@ -9,18 +9,23 @@
 .h1, .p{
     position: relative;
     left: 9rem;
-    bottom: 9rem;
+    bottom: 6rem;
 }
 .sum{
     position: absolute;
-    top: 20rem;
-    left: 20rem;
+    height: 98vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .dadosPai{
-    background-color: rgba(237, 234, 234, 0.608);
+    background-color: rgba(160, 156, 156, 0.608);
     border-radius: 30px;
     position: relative;
-    left: 5rem;
+    width:50%;
+    left: 9rem;
     bottom: 5rem;
     padding: 20px;
 }
@@ -100,7 +105,7 @@
 .bts {
     position: relative;
     left: 5rem;
-    top: 10rem;
+    top: 5rem;
     display: flex;
     gap: 15rem;
 }
